<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pat Care</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Lost and Found pets</string>
    <string name="title_section4">Adobt a pet</string>
     <string name="title_section5">Give or sell a pet</string>
    <string name="title_section6">Tips for Pet Care</string>
    <string name="title_section7">Near vet-stations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_exit">Log out</string>
    <string name="action_about_us">About Us</string>
    <string name="postBTN">POST</string>
    <string name="comentString">Enter your comment here</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nameTV">Name</string>
    <string name="lastnameTv">Last Name</string>
    <string name="timeTV">Time of post</string>
    <string name="tvComment">Your Comment here</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="stringForCommnet">Enter your comment here</string>
    <string name="post_btn">Post</string>
    <string name="addAPost">Add a Post</string>
    <string name="title_activity_register">Register</string>
    <string name="usernameR">Username</string>
    <string name="passwordRegister">Password</string>
    <string name="btnRegistertext">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailhint">Email</string>
    <string name="lname">Last Name</string>
    <string name="takeaphoto">Take a photo</string>
    <string name="motostring">save the injured, love the abandoned</string>
    <string name="motostring2">Rescue the lost,</string>
    <string name="tp">TAKE</string>
    <string name="loc">Plc</string>
    <string name="myLocation">obtain my location</string>
    <string name="newLocation">add location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="losttv">Lost pet</string>
    <string name="foundtv">Found a pet</string>
    <string name="sellgivetv">Sell a pet</string>
    <string name="aboutustext">    \t We are people who care about animals and live for them. We made this application becouse we wanted to meke a faster way for owners of pets to get information about how to care for their pets, and if their pet is lost then to share it in this aplication with picture, location and if the want to find a home for abandoned pets.</string>
    <string name="prodolzenieaboutus">With PetCare we provide also  tip for users how to take care for their pets and what to do in emergensies.</string>
    <string name="title_activity_reply_comment">ReplyComment</string>
    <string name="writeacomment">Write a comment</string>
    <string name="replaycommentt">Enter text here..</string>
    <string name="title_activity_comments_on_post">CommentsOnPost</string>
    <string name="numberofcomments">12 comments</string>
    <string name="petcare1">Regular Exams are Vital</string>
    <string name="petcare2">Spay and Neuter Your Pets</string>
    <string name="petcare3">Prevent Parasites</string>
    <string name="petcare4">Maintain a Healthy Weight</string>
    <string name="petcare5">Get Regular Vaccinations</string>
    <string name="petcare6">Provide an Enriched Environment</string>
    <string name="petcare7">ID Microchip Your Pet</string>
    <string name="petcare8">Pets Need Dental Care, Too</string>
    <string name="petcare9">Never Give Pets People Medication</string>
    <string name="petcare10">Proper Restraint in a Vehicle</string>
    <string name="tip1">Just like you, your pet can get heart problems, develop arthritis, or have a toothache. The best way to prevent such problems or catch them early is to see your veterinarian every year. Regular exams are "the single most important way to keep pets healthy," says Kara M. Burns, MS, Med, LVT, president of the Academy of Veterinary Nutrition Technicians. Annual vet visits should touch on nutrition and weight control, says Oregon veterinarian Marla J. McGeorge, DVM, as well as cover recommended vaccinations, parasite control, dental exam, and health screenings.</string>
    <string name="tip2">Eight million to 10 million pets end up in U.S. shelters every year. Some are lost, some have been abandoned, and some are homeless. Here\'s an easy way to avoid adding to that number spay and neuter your cats and dogs. It\'s a procedure that can be performed as early as six to eight weeks of age. Spaying and neutering doesn\'t just cut down on the number of unwanted pets; it has other substantial benefits for your pet. Studies show it also lowers the risk of certain cancers, Burns tells WebMD, and reduces a pet\'s risk of getting lost by decreasing the tendency to roam.</string>
    <string name="tip3">Fleas are the most common external parasite that can plague pets, and they can lead to irritated skin, hair loss, hot spots, and infection. Fleas can also introduce other parasites into your cat or dog. All it takes is for your pet to swallow one flea, and it can to end up with tapeworms, the most common internal parasite affecting dogs and cats.Year-round prevention is key, says McGeorge, who suggests regular flea and intestinal parasite control, as well as heartworm prevention in endemic areas.Because some parasite medications made for dogs can be fatal to cats, talk to your vet about keeping your precious pets worm-free, flea-free and safe.</string>
    <string name="tip4">Many dogs and cats in the U.S. are overweight or obese. And just like people, obesity in pets comes with health risks that include diabetes, arthritis, and cancer. Overfeeding is the leading cause of obesity, says Douglas, who adds that keeping our pets trim can add years to their lives. Because pets need far fewer calories than most of us think  as little as 185 to 370 a day for a small, inactive dog; just 240-350 calories daily for a 10-pound cat talk to your vet, who can make feeding suggestions based on your pet\'s age, weight, and lifestyle.</string>
    <string name="tip5">For optimal health, pets need regular vaccinations against common ills, such as rabies, distemper, feline leukemia, and canine hepatitis.How often your dog or cat needs to be immunized depends on their age, lifestyle, health, and risks, says McGeorge, so talk to your vet about the vaccinations that make sense for your pet.</string>
    <string name="tip6">An enriched environment is another key to the long-term health and welfare of your canine and feline friends, says C.A. Tony Buffington, DVM, PhD, a veterinary nutritionist and professor at Ohio State University Veterinary Medical Center in Columbus.Pets need mental stimulation, say the pros, which may mean daily walks for your pooch, and scratching posts, window perches, and toys for your cat. It means play time with you, which not only keeps your pet\'s muscles toned and boredom at bay, it also strengthens your bond with your four-footed companions.</string>
    <string name="tip7">Lack of identification means as few as 14% of pets ever find their way home after getting lost. Fortunately, "microchipping allows for the pet to be reunited with its family," no matter how far away it is when found, Burns says. About the size of a rice grain, a microchip is inserted under the skin in less than a second. It needs no battery and can be scanned by a vet or an animal control officer in seconds.Be sure to register the chip ID with the chip\'s maker. A current registration is the vital last step in making certain your pet can always find his way home.</string>
    <string name="tip9">Medicines made for humans can kill your pet, says Georgia veterinarian Jean Sonnenfield, DVM. As a matter of fact, in 2010 the ASPCA listed human drugs in the top 10 pet toxins. NSAIDs like ibuprofen and naproxen are the most common pet poisoning culprits, but antidepressants, decongestants, muscle relaxants, and acetaminophen are just a few of the human drugs that pose health risks to pets. Human drugs can cause kidney damage, seizures, and cardiac arrest in a dog or cat. If you suspect your pet has consumed your medication -- or anything toxic  call the 24-hour ASPCA Animal Poison Control Center. Also be sure to immediately check with your vet, and if it is during evening or weekend hours when your regular veterinary clinic may be closed, check for a local 24-hour emergency veterinary clinic and take your pet there for an examination. Many metropolitan areas have these clinics.</string>
    <string name="tip10">You buckle up for safety when you\'re in the car, shouldn\'t your pet? Unrestrained pets in a car are a distraction to the driver, and can put driver and pet at risk for serious injury, "or worse," says veterinarian Douglas. To keep pets safe in transit: Never allow pets to travel in the front seat, where they\'re at risk of severe injury or death if the airbag deploys. Don\'t let dogs ride with their head out the window or untethered in the back of a truck bed. Both practices put them at risk of being thrown from the vehicle in the event of an accident. To keep pets safe, confine cats to carriers, suggests Douglas, then secure the carrier with a seatbelt. For dogs, there\'s the option of a special harness attached to a seat belt, or a well-secured kennel.</string>
    <string name="title_activity_tip">TipActivity</string>
    <string name="contentofTip">tip content</string>
    <string name="title_activity_user__profile__visit">User_Profile_Visit</string>
    <string name="title_activity_map_activity_pet_location">Map_activity_pet_location</string>
    <string name="adresoncustumview">No address added!</string>
    <string name="usernamehint">Username</string>
    <string name="title_activity_nearby_places">NearbyPlaces</string>
    <string name="errornetwork">Error Problems please try to connect to internet !!</string>

</resources>
