<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
          android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
         android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
     
        android:src="@drawable/kikko" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/nameTV"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#222" />

    <TextView
        android:id="@+id/TVtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/tvName"
        android:text="@string/timeTV"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#778899" />

    <TextView
        android:id="@+id/TVComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="21dp"
        android:text="@string/tvComment"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#778899" />

    <TextView
        android:id="@+id/TVLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvName"
        android:layout_alignBottom="@+id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:paddingLeft="10dp"
        android:text="@string/lastnameTv"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#222" />

</RelativeLayout>
