<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerbacground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.petcarekl.patcareteam2.Register" >

    <ImageView
        android:id="@+id/commentimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/registrationicon" />
    
    <RelativeLayout
         android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="150dp"
         >
        
         <EditText
             android:id="@+id/firstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="center"
             android:hint="@string/firstname"
             android:textColor="#ffffff"
             android:textColorHint="#ffffff" >

    <requestFocus />
    </EditText>
  
    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
         android:gravity="center"
        android:ems="10"
        android:hint="@string/lastName"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
         android:gravity="center"
        android:ems="10"
        android:hint="@string/emailhint"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" 
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameRegister"
         android:gravity="center"
        android:ems="10"
        android:hint="@string/passwordRegister"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    
        
    </RelativeLayout>
    
    
   
<Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      
        android:layout_centerHorizontal="true"
       
        android:text="@string/btnRegistertext" 
          android:background="@drawable/shape"
          android:textColor="#ffffff"
             android:layout_alignParentBottom="true"
        
        />
    
</RelativeLayout>
