<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patcareteam2.CommentActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/comment_image" />

    <EditText
        android:id="@+id/ETforEnteringCommnets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:hint="@string/stringForCommnet"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnPostComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ETforEnteringCommnets"
        android:layout_marginBottom="83dp"
        android:text="@string/post_btn" />

    <Button
        android:id="@+id/BtnTakeAPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignTop="@+id/btnPostComment"
        android:layout_marginTop="14dp"
        android:text="@string/takeaphoto" />

    <ImageView
        android:id="@+id/takenImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ETforEnteringCommnets"
        android:layout_below="@+id/ETforEnteringCommnets"
        android:layout_marginTop="70dp"
        
        android:src="@drawable/kikko" />

</RelativeLayout>
